add hero and mission sections

--- a/src/main.twig
+++ b/src/main.twig
@@ -1,5 +1,56 @@
 {% extends 'templates/base.twig' %}
 
 {% block page %}
+<section class="hero section">
+  <div class="container">
+    <div class="splide js-slider" data-name="hero">
+      <div class="splide__track">
+        <ul class="splide__list hero__list">
+        {% for i in 1..5 %}
+          <li class="splide__slide hero__item">
+            <h2 class="hero__title">{{ loop.index }}Получите кэшбэк от стоимости банковской гарантии</h2>
+            <div class="hero__bottom">
+              <p class="hero__desc">При условии самостоятельного оформления через личный кабинет, на любой счет, указанный при регистрации</p>
+              <a href="#" class="hero__order-btn btn">Получить</a>
+            </div>
+          </li>
+        {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 
+<section class="mission section">
+  <div class="container">
+    <div class="mission__inner">
+      <div class="mission__title-wrap">
+        <h3 class="mission__subtitle">О&nbsp;компании</h3>
+        <h2 class="misson__title title">Наша миссия</h2>
+      </div>
+      <ul class="mission__list">
+      {% set list = [
+        {
+          title: 'Цель',
+          desc: 'Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.',
+        },
+        {
+          title: 'Задача',
+          desc: 'Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)',
+        },
+        {
+          title: 'Реализация',
+          desc: 'Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.',
+        },
+      ] %}
+      {% for item in list %}
+        <li class="mission__item" data-order="{{ loop.index }}">
+          <h3 class="mission__item-title">{{ item.title }}</h3>
+          <p class="mission__item-desc">{{ item.desc }}</p>
+        </li>
+      {% endfor %}
+      </ul>
+    </div>
+  </div>
+</section>
 {% endblock %}
