--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,2 +1,5 @@
-// @include font-face('GothamPro', 'GothamPro/GothamPro-Regular', 400);
+@include font-face('Raleway', 'Raleway/Raleway-Regular', 400);
+@include font-face('Raleway', 'Raleway/Raleway-Medium', 500);
+@include font-face('Raleway', 'Raleway/Raleway-SemiBold', 600);
+@include font-face('Raleway', 'Raleway/Raleway-Bold', 700);
 
