--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // colors
-$color-main: #000;
-$color-second: #fff;
+$color-main: #60BF00;
+// $color-second: #fff;
 
 // media queries
 $tablet-width: 768px;
@@ -9,7 +9,7 @@ $note-width: 1360px;
 $desktop-lg-width: 1600px;
 
 // font families
-$customFont: 'custom font';
+$raleway: "Raleway", "Arial", sans-serif;
 
 // z-index z1 - поверх всех
 $z1: 1500;
