--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -15,7 +15,7 @@ html {
 
 body {
   min-width: 36rem;
-  font-family: $customFont;
+  font-family: $raleway;
   font-size: 1.6rem;
   color: #000;
   line-height: 1.1;
@@ -75,7 +75,7 @@ input {
     padding: 0 2.4rem;
   }
   @include breakpoint($desktop-width) {
-    padding: 0 8rem;
+    padding: 0 10rem;
   }
   @include breakpoint($desktop-lg-width) {
     padding: 0 12rem;
@@ -93,5 +93,15 @@ input {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
+}
+
+.section {
+  margin-bottom: 8rem;
+  @include breakpoint($tablet-width) {
+    margin-bottom: 10rem;
+  }
+  @include breakpoint($desktop-width) {
+    margin-bottom: 12rem;
+  }
 }
 
