--- a/src/styles/common/_btn.scss
+++ b/src/styles/common/_btn.scss
@@ -1,15 +1,18 @@
 .btn {
   display: inline-block;
-  padding: 1.1rem 1.1rem;
+  padding: 1.9rem 2.4rem;
   color: #fff;
   font-size: 1.6rem;
   line-height: 1;
-  font-weight: 500;
+  font-weight: 700;
   text-decoration: none;
+  letter-spacing: 0.08em;
+  line-height: 2rem;
   background-color: $color-main;
-  border-radius: .4rem;
+  border-radius: .6rem;
   text-align: center;
   border: 1px solid $color-main;
+  outline: none;
 
   &._full {
     width: 100%;
