--- a/src/styles/common/_title.scss
+++ b/src/styles/common/_title.scss
@@ -1,9 +1,10 @@
 .title {
   margin: 0;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 3.2rem;
-  line-height: 1;
-  color: #272727;
+  line-height: 3.8rem;
+  color: #252525;
+  letter-spacing: 0.05em;
   &._centered {
     text-align: center;
   }
