--- a/src/main.twig
+++ b/src/main.twig
@@ -53,4 +53,41 @@
     </div>
   </div>
 </section>
+
+<section class="fin-products">
+  <div class="container">
+    <h2 class="fin-products__title title">Финансовые продукты</h2>
+    <ul class="fin-products__list">
+
+    {% set list = ['Банковские гарантии', 'Рассчетно-кассовое обслуживания', 'Кредитование', 'Факторинг', 'Финансирование контрактов', 'Зарплатные проекты'] %}
+
+    {% for item in list %}
+      <li class="fin-products__item">
+        <a href="#" class="fin-products__item-link">
+          <h3 class="fin-products__item-title">{{ item }}</h3>
+          <span class="fin-products__go">Перейти</span>
+          <svg class="fin-products__item-arrow"><use xlink:href="assets/sprite.svg#arrow-right"></use></svg>
+        </a>
+      </li>
+    {% endfor %}
+    </ul>
+  </div>
+</section>
+
+<section class="purchase-service">
+  <div class="container">
+    <h2 class="purchase-service__title title">Услуги в&nbsp;сфере закупок</h2>
+    <div class="purchase-service__wrap">
+      <div class="purchase-service__card _customer">
+        <h3 class="purchase-service__card-title">Заказчику</h3>
+        <ul class="purchase-service__list">
+          <li class="purchase-service__item">Расчет и&nbsp;обоснование НМЦ</li>
+          <li class="purchase-service__item">Подготовка закупочной документации</li>
+          <li class="purchase-service__item">Централизация закупочной деятельности</li>
+          <li class="purchase-service__item">Организация и&nbsp;проведение закупки, заключение контракта</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
 {% endblock %}
