--- a/src/main.twig
+++ b/src/main.twig
@@ -1,6 +1,7 @@
 {% extends 'templates/base.twig' %}
 
 {% block page %}
+<h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
 <section class="hero section">
   <div class="container">
     <div class="splide js-slider" data-name="hero">
@@ -87,6 +88,24 @@
           <li class="purchase-service__item">Организация и&nbsp;проведение закупки, заключение контракта</li>
         </ul>
       </div>
+      <div class="purchase-service__card _participant">
+        <h3 class="purchase-service__card-title">Участнику</h3>
+        <ul class="purchase-service__list">
+          <li class="purchase-service__item">Ускоренная регистрация на&nbsp;АСТ ГОЗ</li>
+          <li class="purchase-service__item">Поиск закупок, анализ документации</li>
+          <li class="purchase-service__item">Подготовка заявки</li>
+          <li class="purchase-service__item">Подача заявки</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="banner">
+  <div class="container">
+    <div class="banner__inner">
+      <h2 class="banner__title">Баннер с призывом к действию</h2>
+      <a href="#" class="banner__order-link btn">стать агентом</a>
     </div>
   </div>
 </section>
