--- a/src/styles/blocks/_purchase-service.scss
+++ b/src/styles/blocks/_purchase-service.scss
@@ -13,14 +13,58 @@
   }
 
   &__card {
+    position: relative;
     width: calc(50% - 2rem);
     margin-right: 2rem;
     margin-top: 2rem;
     padding: 4rem;
     padding-bottom: 5.4rem;
+    padding-right: 20rem;
     background-color: #F5F5F5;
     border-radius: 8px;
+    overflow: hidden;
+    &::after {
+      content: '';
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 28rem;
+      height: 100%;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &._customer::after {
+      background-image: url("../assets/img/customer.png");
+    }
+    &._participant::after {
+      background-image: url("../assets/img/participant.png");
+    }
+  }
+
+  &__card-title {
+    margin: 0;
+    margin-bottom: 3.6rem;
+    font-size: 2.4rem;
+    line-height: 2.8rem;
+    font-weight: 500;
+    letter-spacing: 0.03em;
+    color: #142330;
+  }
+
+  &__item {
+    position: relative;
+    margin-bottom: 2.4rem;
+    padding-left: 1.8rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    letter-spacing: 0.03em;
+    background-image: url("../assets/img/blue-checkmark.svg");
     background-repeat: no-repeat;
-    bg
+    background-position: top .4rem left 0;
+    &:last-child {
+      margin-bottom: 0;
+    }
+
   }
 }
