--- a/src/index.twig
+++ b/src/index.twig
@@ -4,23 +4,35 @@
 
 {% block page %}
     {%
-        set pagesList = [
-          {
-              link: 'main',
-              title: 'Главная'
-          },
-        ]
+      set pagesList = [
+        {
+            link: 'main',
+            title: 'Главная'
+        },
+        {
+            link: 'fin-products',
+            title: 'Разводящая - Финансовые продукты'
+        },
+        {
+            link: 'services-customer',
+            title: 'Разводящая - Услуги заказчику'
+        },
+        {
+            link: 'services-participant',
+            title: 'Разводящая - Услуги участнику'
+        },
+      ]
     %}
 
     <div class="container" style="margin-bottom: 100px">
-        <h1>{{ block("title") }}</h1>
+      <h1>{{ block("title") }}</h1>
 
-        <ul>
-            {% for item in pagesList %}
-                <li style="margin-bottom: 1rem">
-                    <a href="{{ item.link }}.html">{{ item.title }}</a>
-                </li>
-            {% endfor %}
-        </ul>
+      <ul>
+      {% for item in pagesList %}
+        <li style="margin-bottom: 1rem">
+            <a href="{{ item.link }}.html">{{ item.title }}</a>
+        </li>
+      {% endfor %}
+      </ul>
     </div>
 {% endblock %}
