add about-content page

--- a/src/index.twig
+++ b/src/index.twig
@@ -21,6 +21,10 @@
             link: 'services-participant',
             title: 'Разводящая - Услуги участнику'
         },
+        {
+            link: 'about-content',
+            title: 'О компании - контентная (миссия, банкам, агентам)'
+        },
       ]
     %}
 
