--- a/src/main.twig
+++ b/src/main.twig
@@ -1,5 +1,7 @@
 {% extends 'templates/base.twig' %}
 
+{% set pageName = 'main' %}
+
 {% block page %}
 <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
 <section class="hero section">
@@ -101,12 +103,6 @@
   </div>
 </section>
 
-<section class="banner">
-  <div class="container">
-    <div class="banner__inner">
-      <h2 class="banner__title">Баннер с призывом к действию</h2>
-      <a href="#" class="banner__order-link btn">стать агентом</a>
-    </div>
-  </div>
-</section>
+{% include 'templates/banner.twig' %}
+
 {% endblock %}
