--- a/src/templates/footer.twig
+++ b/src/templates/footer.twig
@@ -3,9 +3,9 @@
     <div class="container">
       <div class="footer__top-inner">
         <div class="footer__section _logo">
-          <a href="/" class="footer__logo-link">
+          {{ pageName == 'main' ? '<span class="footer__logo-link">' : '<a href="/" class="footer__logo-link">'}}
             <svg class="footer__logo-img"><use xlink:href="assets/sprite.svg#logo"></use></svg>
-          </a>
+          {{ pageName == 'main' ? '</span>' : '</a>' }}
           <p class="footer__company-name">ООО &laquo;ЕСК&raquo;</p>
         </div>
         <div class="footer__section">
