--- a/src/index.twig
+++ b/src/index.twig
@@ -25,6 +25,10 @@
             link: 'about-content',
             title: 'О компании - контентная (миссия, банкам, агентам)'
         },
+        {
+            link: 'docs',
+            title: 'Документы'
+        },
       ]
     %}
 
