--- a/src/index.twig
+++ b/src/index.twig
@@ -29,6 +29,18 @@
             link: 'docs',
             title: 'Документы'
         },
+        {
+            link: 'gallery',
+            title: 'Фотографии'
+        },
+        {
+            link: 'album',
+            title: 'Альбом'
+        },
+        {
+            link: 'contacts',
+            title: 'Контакты'
+        },
       ]
     %}
 
