--- a/src/services-participant.twig
+++ b/src/services-participant.twig
@@ -2,8 +2,8 @@
 
 {% block page %}
 {% include 'templates/categories.twig' with {
-  mobileImg: 'services-customer.jpg',
-  desktopImg: 'services-customer.jpg',
+  mobileImg: 'services-participant.jpg',
+  desktopImg: 'services-participant.jpg',
   title: 'Услуги участнику',
   list: [
     {
