--- a/src/templates/footer.twig
+++ b/src/templates/footer.twig
@@ -32,3 +32,12 @@
     </div>
   </div>
 </footer>
+
+<div class="popup js-popup" id="error-popup">
+  <button class="popup__close-btn js-close-popup" type="button">
+      <svg><use xlink:href="assets/sprite.svg#close"></use></svg>
+  </button>
+  <div class="popup__inner">
+    <h3 class="title popup__title _centered">Что-то пошло не так.</h3>
+  </div>
+</div>
