--- a/src/docs.twig
+++ b/src/docs.twig
@@ -1,5 +1,7 @@
 {% extends 'templates/base.twig' %}
 
+{% set darkHeader = true %}
+
 {% block page %}
 <div class="docs">
   <div class="container">
