--- a/src/index.twig
+++ b/src/index.twig
@@ -41,6 +41,22 @@
             link: 'contacts',
             title: 'Контакты'
         },
+        {
+            link: 'fin-products-detail',
+            title: 'Финансовые продукты - детальная'
+        },
+        {
+            link: 'services-customer-detail',
+            title: 'Услуги заказчику - детальная'
+        },
+        {
+            link: 'services-participant-detail',
+            title: 'Услуги участнику - детальная'
+        },
+        {
+            link: 'privacy-policy',
+            title: 'Политика конфиденциальности'
+        },
       ]
     %}
 
