--- a/src/styles/blocks/_album.scss
+++ b/src/styles/blocks/_album.scss
@@ -38,4 +38,14 @@
     height: 100%;
     object-fit: cover;
   }
+
+  .detail-hero {
+    &__text {
+      margin-top: 2rem;
+      font-size: 2.4rem;
+      line-height: 2.8rem;
+      font-weight: 500;
+      letter-spacing: 0.03em;
+    }
+  }
 }
