--- a/src/styles/blocks/_detail-hero.scss
+++ b/src/styles/blocks/_detail-hero.scss
@@ -16,6 +16,10 @@
     background-image: var(--hero-img-desktop);
   }
 
+  &._hight {
+    min-height: 71rem;
+  }
+
   &::after {
     content: '';
     @include stretchAbsolute();
@@ -29,10 +33,23 @@
 
   &__title {
     margin: 0;
-    margin-bottom: 2rem;
     font-weight: 500;
     font-size: 6rem;
     line-height: 7rem;
     letter-spacing: 0.05em;
+  }
+
+  &__text {
+    max-width: 52.4rem;
+    margin: 0;
+    margin-top: 3.6rem;
+    letter-spacing: 0.03em;
+  }
+
+  &__order-btn {
+    margin-top: 3.6rem;
+    width: 26rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
