--- a/src/contacts.twig
+++ b/src/contacts.twig
@@ -60,7 +60,7 @@
 <section class="feedback">
   <div class="container">
     <h2 class="feedback__title title">Обратная связь</h2>
-    <form action="action" method="post" class="feedback__form form js-form" data-name="feedback">
+    <form action="action" class="feedback__form form js-form" data-name="feedback">
       <div class="feedback__fields">
         <div class="feedback__text-inputs">
           <div class="form__item js-form-item">
@@ -86,21 +86,12 @@
           <label class="form__checkbox js-form-item">
             <input class="form__checkbox-input js-required" type="checkbox" name="privacy-policy">
             <span class="form__checkbox-text">
-              <span>Нажимая кнопку “отправить” я даю согласие на обработку персональных данных в соответсвие с <a href="#" target="_blank" class="feedback__policy-link">политикой конфиденциальности</a></span>
+              <span>Нажимая кнопку “отправить” я даю согласие на обработку персональных данных в соответсвие с <a href="#" target="_blank" class="form__policy-link">политикой конфиденциальности</a></span>
             </span>
           </label>
         </div>
       </div>
     </form>
-  </div>
-
-  <div class="popup js-popup" id="feedback-success-popup">
-    <button class="popup__close-btn js-close-popup" type="button">
-      <svg><use xlink:href="assets/sprite.svg#close"></use></svg>
-    </button>
-    <div class="popup__inner">
-      <h3 class="title">Ваша заявка отправлена</h3>
-    </div>
   </div>
 </section>
 
