--- a/src/templates/detail-hero.twig
+++ b/src/templates/detail-hero.twig
@@ -15,7 +15,7 @@
   {% endif %}
 
   {% if (orderBtn) %}
-    <a href="#" class="detail-hero__order-btn btn js-open-popup" data-popup-id="order-popup">Оставить заявку</a>
+    <a href="#" class="detail-hero__order-btn btn js-open-popup" data-popup-id="order-popup-1">Оставить заявку</a>
   {% endif %}
   </div>
 </div>
