--- a/src/styles/_body-mods.scss
+++ b/src/styles/_body-mods.scss
@@ -22,20 +22,17 @@
 // popup
 
 ._popup-open {
-  position: relative;
   overflow: hidden;
-
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    pointer-events: none;
-    background-color: rgba(0, 0, 0, 0.1);
-    z-index: $z2;
-  }
+    &::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.1);
+      z-index: $z2;
+    }
 }
 
 ._dark-header {
