--- a/src/styles/common/_form.scss
+++ b/src/styles/common/_form.scss
@@ -20,8 +20,8 @@
 
     &:checked + .form__checkbox-text::before {
       background-image: url('../assets/img/blue-checkmark.svg');
-      background-size: 1rem 1rem;
-      background-position: top right;
+      background-size: 1.2rem 1.2rem;
+      background-position: center center;
       background-repeat: no-repeat;
     }
   }
@@ -40,6 +40,7 @@
   }
 
   &__item {
+    position: relative;
     margin-bottom: 1.5rem;
     &:last-child {
       margin-bottom: 0;
@@ -47,12 +48,48 @@
 
     &._error {
       .form {
-        &__text-input {
+        &__text-input,
+        &__file-label {
           border-color: red!important;
           color: red;
           &::placeholder {
             color: red;
           }
+        }
+
+        &__file-text {
+          color: red;
+        }
+      }
+    }
+
+    &._filled {
+      .form {
+        &__file-label,
+        &__text-input {
+          border-color: #313131;
+          &:focus {
+            border-color: #12528D;
+          }
+        }
+
+        &__file-label {
+          padding-right: 3.6rem;
+        }
+
+        &__file-text {
+          color: #313131;
+          &::after {
+            display: none;
+          }
+        }
+
+        &__file-icon {
+          display: none;
+        }
+
+        &__file-remove {
+          display: flex;
         }
       }
     }
@@ -86,4 +123,58 @@
       }
     }
   }
+
+  &__policy-link {
+    text-decoration: none;
+    color: #31B5FF;
+  }
+
+  &__file-label {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: .8rem 1.4rem;
+    font-size: 1.6rem;
+    line-height: 1.8rem;
+    background-color: #fff;
+    border: 1px solid #BBBBBB;
+    transition: all .3s;
+    border-radius: .3rem;
+  }
+
+  &__file-text {
+    color: #9A9A9A;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    &::after {
+      content: attr(data-default);
+    }
+  }
+
+  &__file-icon {
+    flex-shrink: 0;
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-left: 1rem;
+  }
+
+  &__file-remove {
+    @include btn-reset();
+    position: absolute;
+    top: 50%;
+    right: 0.7rem;
+    transform: translateY(-50%);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    svg {
+      width: 1.5rem;
+      height: 1.5rem;
+      stroke: #12528D;
+    }
+  }
+
 }
