--- a/src/styles/common/_popup.scss
+++ b/src/styles/common/_popup.scss
@@ -5,13 +5,15 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-height: calc(var(--vh, 1vh) * 100 - 4rem);
-  padding: 3.6rem 2rem;
+  padding: 5rem 5.4rem;
+  padding-top: 6.8rem;
   z-index: $z1;
   background-color: #fff;
   overflow: auto;
   width: calc(100% - 4rem);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
   border-radius: 9px;
+  color: #000;
   @include breakpoint($tablet-width) {
     width: 60rem;
   }
@@ -36,6 +38,66 @@
       width: 1.4rem;
       height: 1.4rem;
       stroke: #4F4F4F;
+    }
+  }
+
+  &__title {
+    margin: 0;
+    margin-bottom: 2rem;
+    font-weight: 600;
+    font-size: 3.2rem;
+    line-height: 3.8rem;
+    letter-spacing: 0.05em;
+    color: #313131;
+  }
+
+  &__form-fields {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -2rem;
+    margin-right: -2rem;
+    margin-bottom: 2rem;
+
+    .form {
+      &__item {
+        width: calc(50% - 2rem);
+        margin: 0;
+        margin-top: 2rem;
+        margin-right: 2rem;
+      }
+    }
+  }
+
+  &__submit-btn {
+    width: 100%;
+    margin-bottom: 2.4rem;
+    padding-top: 1.4rem;
+    padding-bottom: 1.4rem;
+  }
+
+  .form {
+    &__text-input {
+      padding: 1.1rem 1.4rem;
+      color: #313131;
+      font-size: 1.6rem;
+      line-height: 1.8rem;
+      background-color: #fff;
+      border-color: #BBBBBB;
+      transition: all .3s;
+      border-radius: .3rem;
+      &:focus {
+        border-color: #12528D;
+      }
+    }
+
+    &__checkbox-input:checked + .form__checkbox-text::before {
+      background-color: #60BF00;
+      border-color: #60BF00;
+      background-image: url("../assets/img/white-checkmark.svg");
+    }
+
+    &__file-label {
+      min-height: 4.2rem;
     }
   }
 }
