--- a/src/templates/banner.twig
+++ b/src/templates/banner.twig
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="banner__inner">
       <h2 class="banner__title">Баннер с призывом к действию</h2>
-      <a href="#" class="banner__order-link btn">стать агентом</a>
+      <a href="#" class="banner__order-link btn js-open-popup" data-popup-id="order-popup-1">стать агентом</a>
     </div>
   </div>
 </section>
