--- a/src/main.twig
+++ b/src/main.twig
@@ -5,7 +5,7 @@
 {% block page %}
 <h1 class="visually-hidden">Центр поддержки предприятий ОПК</h1>
 
-<section class="hero section">
+<section class="hero section js-hero">
   <div class="container">
     <div class="splide js-slider" data-name="hero">
       <div class="splide__track">
