--- a/src/styles/blocks/_docs.scss
+++ b/src/styles/blocks/_docs.scss
@@ -1,6 +1,6 @@
 .docs {
   margin-bottom: 12rem;
-  padding-top: 3.5rem;
+  padding-top: calc(var(--header-height, 9rem) + 3.5rem);
 
   &__title {
     margin: 0;
