--- a/src/styles/blocks/_privacy-policy.scss
+++ b/src/styles/blocks/_privacy-policy.scss
@@ -1,4 +1,5 @@
 .privacy-policy {
+  padding-top: calc(var(--header-height, 9rem) + 3.5rem);
   margin-bottom: 6.2rem;
   &__title {
     margin: 0;
