--- a/src/about-content.twig
+++ b/src/about-content.twig
@@ -19,6 +19,7 @@
   <div class="container">
     <div class="content">
       <h2>Подзаголовок второго уровня</h2>
+      <video src="assets/img/optimized.mp4" controls></video>
       <p>Если говорить простыми словами, то банковская гарантия – это обещание банка заплатить оговоренную сумму долга за клиента, если тот не сделает этого.</p>
       <p>Предоставление банковской гарантии обеспечивает безопасность сделки для того, кто получит деньги (бенефициара) и сделает возможным сделку для того, у кого проблемы с финансами (принципал).</p>
       <p>До 2015 года выступать гарантом мог только банк, но сегодня в обиход введён новый термин «независимая гарантия». Такое обязательство может взять на себя любая коммерческая организация.</p>
