--- a/src/templates/footer-popups.twig
+++ b/src/templates/footer-popups.twig
@@ -6,3 +6,12 @@
     <h3 class="title popup__title _centered">Что-то пошло не так.</h3>
   </div>
 </div>
+
+<div class="popup js-popup" id="success-popup">
+  <button class="popup__close-btn js-close-popup" type="button">
+      <svg><use xlink:href="assets/sprite.svg#close"></use></svg>
+  </button>
+  <div class="popup__inner">
+    <h3 class="title popup__title _centered">Ваша заявка отправлена.</h3>
+  </div>
+</div>
